@@ -6,6 +6,9 @@ import generic
 import string
 import tempfile
 
+modeR = 'r'
+modeW = 'w'
+
 class reader(generic.reader):
 	indexed = True
 
@@ -65,15 +68,10 @@ class reader(generic.reader):
 			self.counterElements += 1
 			yield generic.indexedElement("Tri3", nodeList, label=str(self.counterElements))
 
-def writer(file, reader, string=False):
+def writer(file, reader):
 	"Reads mesh from a reader and write it into a PLY file"
 	if not reader.indexed:
 		reader = generic.soup2indexed(reader)
-	if string:
-		out = file
-		file = ""
-	else:
-		out = open(file, "w")
 
 	tempFiles = [tempfile.TemporaryFile(mode='w+') for i in range(2)]
 	tempFiles[0].write("ply\nformat ascii 1.0\ncomment generated by meshconvert\n")
@@ -110,9 +108,6 @@ def writer(file, reader, string=False):
 			line = f.readline()
 			if line == "":
 				break
-			out.write(line)
+			file.write(line)
 		f.close
-
-	if not string:
-		out.close()
 
